# sparkcan

./: CMakeLists.txt
examples/: control.cpp  flex_velocity_test.cpp  velocity_ctrl_test.cpp
include/: Spark25xFrames.hpp  SparkBase.hpp  SparkFlex.hpp  SparkMax.hpp
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
macos_can_compat/linux/: can.h
macos_can_compat/linux/can/: raw.h
src/: Spark25xFrames.cpp  SparkBase.cpp  SparkFlex.cpp  SparkMax.cpp
tests/: test_spark25x_frames.cpp
